--- a/main/index.html
+++ b/main/index.html
@@ -7,27 +7,13 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
-  <title> Inserir título </title>
+  <title>Via da Melanogênese</title>
 
 </head>
 <body>
-    <section class="cabecalho">
-      <img src="cnpem.png" width= 20% height= 10%>
-      <div class="titulo">
-        <h1>Via da Melanogênese:</h1>
-        <h1>Cachorro albino</h1>
-      </div>
-      <img src="logo-ilum-cortada.png" alt="">
-    </section>
-    <img class="patas" src="Patinhas.png" alt="Imagem de Patas" style="top: 100px;">
-    <img class="patas" src="Patinhas.png" alt="Imagem de Patas" style="top: 420px;">
-    <img class="patas" src="Patinhas.png" alt="Imagem de Patas" style="top: 740px;">
-    <img class="patas" src="Patinhas.png" alt="Imagem de Patas" style="top: 1060px;">
-    <section class="conteúdo">
-      <h2>Introdução</h2>
-      <p>
-        O albinismo é uma doença de natureza genética em que há um defeito na produção pelo organismo de melanina. Este defeito é a causa de uma ausência parcial ou total da pigmentação dos olhos, pele e pêlos do animal afetado.
-      </p>
-    </section>
+    <h1>Ocorreu um erro ao carregar esse site</h1>
+    <h2>Favor contatar o desenvolvedor</h2>
+    <p>E-mail: rerc877@gmail.com</p>
+    
 </body>
 </html>
