--- a/main/index.html
+++ b/main/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-    <h1>Ocorreu um erro ao carregar esse site</h1>
+    <h1>Ocorreu um erro ao carregar este site</h1>
     <h2>Favor contatar o desenvolvedor</h2>
     <p>E-mail: rerc877@gmail.com</p>
     
