--- a/main/index.html
+++ b/main/index.html
@@ -15,21 +15,25 @@
 </head>
 <body>
   <div class="carrossel-inativo carousel">
-    <svg id="fechar" xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-x-circle-fill" viewBox="0 0 16 16">
+    <svg id="fechar" xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="white" class="bi bi-x-circle-fill" viewBox="0 0 16 16">
       <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293z"/>
     </svg>
     <img src="30-nota1.jpg" alt="Imagem 1" id="imagem_0" class="imagem-ativa">
     <img src="8bcc4db0a6efa724d08f7c7eaa8c5aac--animals-photos-animal-pictures.jpg" alt="Imagem 2" id="imagem_1" class="imagem-inativa">
     <img src="images.jpeg" alt="Imagem 3" id="imagem_2" class="imagem-inativa">
     <img src="1694634015_6502101f91d12_hd.jpg" alt="Imagem 4" id="imagem_3" class="imagem-inativa">
-    <img src="51e1f90e26876ab897592158f54bdb6c--blue-doberman-doberman-love (2).jpg" alt="Imagem 4" id="imagem_4" class="imagem-inativa">
-    <img src="1560864166_5d08e5a6424d7_hd.jpeg" alt="Imagem 5" id="imagem_5" class="imagem-inativa">
+    <img src="51e1f90e26876ab897592158f54bdb6c--blue-doberman-doberman-love (2).jpg" alt="Imagem 5" id="imagem_4" class="imagem-inativa">
+    <img src="1560864166_5d08e5a6424d7_hd.jpeg" alt="Imagem 6" id="imagem_5" class="imagem-inativa">
+    <img src="Captura de tela 2024-11-30 073238.png" alt="Imagem 7" id="imagem_6" class="imagem-inativa">
+    <img src="albino1.jpg" alt="Imagem 8" id="imagem_7" class="imagem-inativa">
+    <img src="cachorro-albino.jpg" alt="Imagem 9" id="imagem_8" class="imagem-inativa">
+    <img src="images (1).jpeg" alt="Imagem 10" id="imagem_9" class="imagem-inativa">
 
     
-    <svg class="left" xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+    <svg class="left" xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="white" class="bi bi-arrow-left" viewBox="0 0 16 16">
       <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8"/>
     </svg>
-    <svg class="right" xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+    <svg class="right" xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="white" class="bi bi-arrow-right" viewBox="0 0 16 16">
       <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"/>
     </svg>
   </div>
@@ -43,11 +47,12 @@
     </section>
     <section class="menu">
       <a href="#introducao"><p>O que é albinismo?</p></a>
-      <a href="#introducao"><p>Sobre o Trabalho</p></a>
       <a href="#introducao"><p>Albinismo em Cachorros</p></a>
       <button id="btn-carrossel"><p>Imagens de Cachorros Albinos</p></button>
-      <a href="#introducao"><p>Proteínas Envolvidas</p></a>
+      <a href="#genes"><p>Genes Envolvidos</p></a>
       <a href="#dict"><p>Dicionário</p></a>
+      <a href="#sobre"><p>Sobre o Trabalho</p></a>
+      <a href="https://www.canva.com/design/DAGX6IWYUD4/5tLMYnOlvKiqM8EtfMF8Yw/view?utm_content=DAGX6IWYUD4&utm_campaign=designshare&utm_medium=link&utm_source=editor" target="_blank"><p>Pôster digital</p></a>
       <a href="#referências"><p>Referências</p></a>
 
     </section>
@@ -61,6 +66,14 @@
     <img class="patas" src="Patinhas.png" alt="Imagem de Patas" style="top: 420px;">
     <img class="patas" src="Patinhas.png" alt="Imagem de Patas" style="top: 740px;">
     <img class="patas" src="Patinhas.png" alt="Imagem de Patas" style="top: 1060px;">
+    <img class="patas" src="Patinhas.png" alt="Imagem de Patas" style="top: 1380px;">
+    <img class="patas" src="Patinhas.png" alt="Imagem de Patas" style="top: 1700px;">
+    <img class="patas" src="Patinhas.png" alt="Imagem de Patas" style="top: 2020px;">
+    <img class="patas" src="Patinhas.png" alt="Imagem de Patas" style="top: 2380px;">
+    <img class="patas" src="Patinhas.png" alt="Imagem de Patas" style="top: 2700px;">
+    <img class="patas" src="Patinhas.png" alt="Imagem de Patas" style="top: 3020px;">
+
+
     <section class="conteúdo">
       <h2 id="introducao">O que é Albinismo?</h2>
       <p>
@@ -72,13 +85,24 @@
       <p>O albinismo não provoca apenas a despigmentação da pele e pelagem dos animais como é comum de se imaginar. Cães que apresentam o fenótipo do albinismo possuem fotofobia, que é uma sensibilidade à luz, que os faz ficar com os olhos semiabertos sob luzes fortes como a do sol na tentativa de impedirem a entrada de parte da luz. Hipopigmentação também ocorre muito, ela é caracterizada pela cor azul e periferia bronzeada da íris, lábios e focinhos rosados e margens das pálpebras levemente pigmentadas. Suscetibilidade maior ao desenvolvimento de câncer de pele devido à ausência de melanina que atua como um protetor natural contra raios ultravioletas, regiões mais expostas devido à menor quantidade de pelos como nariz, orelha e arredores dos olhos são mais vulneráveis ao aparecimento de células cancerígenas. </p>
     </section>
     <section class="conteúdo">
-      <h2>Genes:</h2>
+      <h2 id="genes">Genes:</h2>
       <p>A maior parte das espécies que possuem algum ser com fenótipo de  albinismo sofrem mutações no gene da tirosinase (TYR). No entanto, não é somente ele que pode resultar no albinismo, por exemplo,  família de transportadores de soluto 45, membro 2 (SLC45A2), é um dos genes identificados envolvidos na via da pigmentação. Há casos de albinismo nas mais diversas espécies relacionadas a mutações no gene SLC45A2, e isso resulta na redução na síntese de melanina em diferentes graus; e assim podendo gerar diversos fenótipos de albinismo (diferentes graus de coloração). Um exemplo do gene SLC45A2, é para o caso dos cachorros Doberman Pinscher deleção de 4081 pares de bases no gene SLC45A2, incluindo os últimos 163 bp do último exon (exon 7; g.27,141_31,223del [CanFam2]), causa o OCA na raça Doberman Pinscher.
       </p>
       <p>A maior parte das espécies que possuem algum ser com fenótipo de  albinismo sofrem mutações no gene da tirosinase (TYR). No entanto, não é somente ele que pode resultar no albinismo, por exemplo,  família de transportadores de soluto 45, membro 2 (SLC45A2), é um dos genes identificados envolvidos na via da pigmentação. Há casos de albinismo nas mais diversas espécies relacionadas a mutações no gene SLC45A2, e isso resulta na redução na síntese de melanina em diferentes graus; e assim podendo gerar diversos fenótipos de albinismo (diferentes graus de coloração). Um exemplo do gene SLC45A2, é para o caso dos cachorros Doberman Pinscher deleção de 4081 pares de bases no gene SLC45A2, incluindo os últimos 163 bp do último exon (exon 7; g.27,141_31,223del [CanFam2]), causa o OCA na raça Doberman Pinscher.
+      </p>
+      <h2>Albinismo em cães Doberman Pinscher
+      </h2>
+      <p>Cães da raça doberman pinscher que eram homozigotos para uma deleção de 4081 pares de bases do gene SLC45A2 (entre as posições 77,062,968 e 77,067,051 no cromossomo 4) apresentavam sintomas de albinismo [3]. Dentre essas deleções, foram identificados até mesmo 163 pares de bases deletados pela mutação no exon 7 do gene, que é o último dos 7 exons, e uma região adjacente a jusante entre as posições de base. O ponto de exclusão dessa deleção terminou 509 pares de bases antes do próximo gene a jusante. Essa mutação prevê a substituição dos últimos 50 aminoácidos do exon 7 por 191 novos aminoácidos antes de um códon de parada a ser encontrado. 
+      </p>
+      <p>A ausência desses pares de bases apenas em indivíduos que possuem albinismo sugere que essa deleção é a causa do fenótipo do albinismo oculocutâneo nesses cães. Tal deleção provoca consequências estruturais para a estrutura da proteína codificada pelo gene SLC45A2, comprometendo a sua função de proteína transportadora de prótons e açúcares ajudando a regular o pH dos melanossomos. Quando esse transporte é prejudicado o ambiente nos melanossomos fica inadequado para a produção da tirosinase, que é uma enzima essencial para a produção de melanina, causando o fenótipo de ausência de pigmentação na pelagem dos cães. 
+      </p>
+      <h2>Cães de pequeno porte e pelagem longa:</h2>
+      <p>Um cachorro da raça Lhasa Apso albino não apresentava a delação g.27141_31223del (CanFam2) em sua sequência do gene SLC45A2 assim como cães da raça Doberman Pinscher apresentam quando são albinos [4]. Nesse cachorro albino ocorre uma substituição não sinônima no sétimo exon, uma alteração de base c.1478G>A que resulta na substituição de uma glicina por um ácido aspártico (p.G493D) [4]. O que é interessante é que  segundo [2] muito outras raças e espécies que são homozigóticas nesse alelo 493D também são albinas, mas há seres de outras  raças que são homozigotas para o alelo 493G, e não para o alelo 493D e são também albinas. Dessa forma, o alelo 493D pode causar o albinismo quando homozigoto em várias raças de cães pequenos e de pelagem longa, mas ele não explica todo o albinismo em cães.
+      </p>
+      <p>Vale ressaltar que cães Lhasa Apso albino não apresentam nenhuma mutação em sua sequência de DNA complementar (cDNA) do gene TYR [5][6]. Este gene, todavia, normalmente resulta em albinismo na maioria das espécies, até mesmo em humanos. 
       </p>
     </section>
-    <section class="conteúdo">
+    <section class="conteúdo dicionario">
       <h2 id="dict">Dicionário:</h2>
       <ul>
         <li>
@@ -149,6 +173,11 @@
           <a href="https://vgl.ucdavis.edu/test/oca-doberman"><strong>Oculocutaneous Albinism (OCA) in Doberman Pinschers | Veterinary Genetics Laboratory. Ucdavis.edu</strong>. Acesso em: 30 nov. 2024.
             ‌           ‌</a>
         </li>
+        <li>
+          <a href="https://www.alphafold.ebi.ac.uk/entry/Q9UMX9"><strong>ALPHAFOLD PROTEIN STRUCTURE DATABASE. AlphaFold Protein Structure Database </strong>Acesso em: 30 nov. 2024.
+            ‌           ‌</a>
+        </li>
+
       </ol>
     </section>
     <script>
