--- a/main/index.html
+++ b/main/index.html
@@ -27,7 +27,8 @@
     <img src="Captura de tela 2024-11-30 073238.png" alt="Imagem 7" id="imagem_6" class="imagem-inativa">
     <img src="albino1.jpg" alt="Imagem 8" id="imagem_7" class="imagem-inativa">
     <img src="cachorro-albino.jpg" alt="Imagem 9" id="imagem_8" class="imagem-inativa">
-    <img src="images (1).jpeg" alt="Imagem 10" id="imagem_9" class="imagem-inativa">
+    <img src="Mídia.jpg" alt="Imagem 10" id="imagem_9" class="imagem-inativa">
+    <img src="Mídia(1).jpg" alt="Imagem 11" id="imagem_10" class="imagem-inativa">
 
     
     <svg class="left" xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="white" class="bi bi-arrow-left" viewBox="0 0 16 16">
